--- a/VapeMod/VapeMod.csproj
+++ b/VapeMod/VapeMod.csproj
@@ -7,6 +7,7 @@
         <Version>1.0.0</Version>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <LangVersion>latest</LangVersion>
+        <IncludeSymbols>True</IncludeSymbols>
     </PropertyGroup>
 
     <ItemGroup>
@@ -39,5 +40,8 @@
       <Reference Include="UnityEngine.CoreModule">
         <HintPath>D:\SteamLibrary\steamapps\common\Lethal Company\Lethal Company_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
       </Reference>
+    </ItemGroup>
+    <ItemGroup>
+      <NetcodePatch Include="$(TargetPath)" />
     </ItemGroup>
 </Project>
